2007-05-08  Zaheer Abbas Merali  <<zaheerabbas at merali dot org>>

	* flumotion/common/config.py (FlumotionConfigXML._parseComponent,
	  FlumotionConfigXML._parseEaters, FlumotionConfigXML._parseSources):
	* flumotion/test/test_config.py
	  (TestConfig.testParseComponentsWithEaters,
	  TestConfig.testParseComponentsWithEatersNotSpecified,
	  TestConfig.testParseComponentsWithEatersDeprecatedWay,
	  TestConfig.testParseComponentsWithTwoEaters,
	  TestConfig.testParseComponentsWithTwoEatersDeprecatedWay,
	  TestConfig.testParseComponentsWithMultipleEater,
	  TestConfig.testParseComponentsWithMultipleEaterDeprecatedWay,
	  TestConfig.testGetComponentEntriesWrong):
	Add new way of configuring eaters in the XML along with tests.
	Fixes #200.

2007-05-08  Michael Smith  <msmith@fluendo.com>

	* configure.ac:
	* flumotion/component/feedcomponent.py:
	* flumotion/component/feedcomponent010.py:
	* flumotion/component/producers/Makefile.am:
	* flumotion/component/producers/playlist/Makefile.am:
	* flumotion/component/producers/playlist/__init__.py:
	* flumotion/component/producers/playlist/playlist.py:
	* flumotion/component/producers/playlist/playlist.xml:
	* flumotion/component/producers/playlist/playlistparser.py:
	* flumotion/component/producers/playlist/singledecodebin.py:
	* flumotion/component/producers/playlist/smartscale.py:
	  Merge playlist component back to trunk now that the basics are
	  functional.

2007-05-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/misc/httpfile/file.py (File, File.__init__,
	  File.getChild, File.renderAuthenticated, MimedFileFactory,
	  MimedFileFactory.__init__, MimedFileFactory.create, FLVFile,
	  FLVFile.renderAuthenticated):
	  Add a subclass for handling FLV files.
	  Implement handling of the start= GET parameter, just like in
	  Apache and lighthttpd.  Fixes #618.
	  Add a MimedFileFactory that allows us to create even the root
	  resource as a mime-type-dependent subclass.